<resources>
    <string name="app_name">PepTalkPal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_a_new_pep_talk">Add a New Pep Talk</string>
    <string name="more_resources_heading">More Resources</string>
    <string name="instuctions_heading">Instructions</string>
    <string name="about_heading">About the app</string>

    <string name="about_text">This app is for anyone who could use a pep talk when you\'re feeling down. \n\n
        Stress and negative emotions can make it hard to think straight leaving them you stuck in that rut. \n\n
        This app reminds you to take a moment to ground yourself, and helps you take an active approach to feeling better.
        </string>

    <string name="instructions_text">
        To use this app, you must create an account, but don\'t worry, we won\'t share your information with anyone.\n\n
        Swipe horizontally through pep talks from the main screen, tap on the text to see the edit option to customize it, and go to the Pep Talks list to add and edit as many as you need. Hold down on a pep talk in the list to delete it. \n\n
        Create a checklist of actions or suggestions that make you feel better, and tap on them to see some notes about each.\n\n
        Visit the resources page if these pep talks aren\'t doing it for you. There are some great techniques to help you get through this.\n\n
        Use the menu on the top right to write yourself a little emergency pep talk that will show up in a homescreen widget. Add the widget to your home screen, and tap on it to receive your own little emergency pep talk, then tap the undo icon to reset it in order to keep that message for your eyes only.
    </string>

    <string name="more_resources_text">Of all the stress management philosophies we\'ve explored, and all the tips and tricks we\'ve used to get through mood lows or bad days, we\'ve have found that the concepts of Mindfulness benefit us most. \n\n
        Read about how guided meditations and mindfulness exercises can help you take an active approach to feeling better right now.
</string>
    <string name="welcome_blurb">let me be yr\nPepTalkPal</string>
    <string name="sign_in_prompt">sign in to get goin\'</string>
    <string name="sign_in">LOGIN</string>
    <string name="sign_out">LOGOUT</string>
    <string name="welcome_back_user">"Welcome back,\n%1$s"</string>
    <string name="main_activity_welcome">Hey %s, it\'s gonna be okay</string>
    <string name="pep_talks">Pep Talks</string>
    <string name="feel_better_checklist">Feel-Better Checklist</string>
    <string name="more_resources">More Resources</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="communicate">Why not reach out to a friend? I know they\'d love to hear from you</string>
    <string name="email">email</string>
    <string name="text">text</string>
    <string name="fb">fb</string>
    <string name="edit_pep_talk">edit pep talk</string>
    <string name="resource_headspace">Headspace</string>
    <string name="resource_befriending">Befriending Ourselves</string>
    <string name="resource_selfcompassion">Self-Compassion</string>
    <string name="resource_mindfulness">Ottowa Mindfulness Clinic</string>

    <string name="checklist_water">Drink a glass of water</string>
    <string name="checklist_water_notes">Hydration will help you feel better, I promise</string>
    <string name="checklist_eat">Eat something</string>
    <string name="checklist_eat_notes">Has it been a few hours since you last ate? Grab something with protein (nuts? hummus?) to get your body back on track</string>
    <string name="checklist_move">Move your body</string>
    <string name="checklist_move_notes">Dance around for the length of a song, go for a walk around the block, something to get your blood flowing. It\'ll make you feel good.</string>
    <string name="checklist_moment">Step back, take a minute</string>
    <string name="checklist_moment_notes">If you\'re feeling overwhelmed, take a moment to ground yourself. Feel your feet on the ground, you can get through this.</string>
    <string name="checklist_breathe">Take some deep breaths</string>
    <string name="checklist_breathe_notes">Focus on really filling up your lungs, and then breathe all the way out, until you can\'t exhale any more. Do this a few times, it\'ll help you regroup.</string>
    <string name="checklist_locations">Change locations</string>
    <string name="checklist_locations_notes">Sometimes you just gotta get out of there. If you can, go to a different room or go visit someone, anything that\'ll give you a little change of scenery and a new perspective.</string>

    <string name="pep_past_present_title">That\'s the past, this is now</string>
    <string name="pep_past_present">It’s easy to dwell on the past, and to convince yourself that the future will be the same way. But remember, you don\’t know the future, and you can\’t change what has already happened. You know what you can do? You can do something right now to get yourself going in the right direction. What can you do this minute that will get you back on track? Go do it! Don’t beat yourself up about what’s already happened. Move forward.</string>
    <string name="pep_facts_emotions_title">Facts vs. Emotions</string>
    <string name="pep_facts_emotions">Sometimes the facts don’t match up with how you feel, and that’s okay. You feel like the world is ending because of one situation, one decision, but take a moment and try to be objective. What are the facts of the situation? What could you do differently? What is the worst that can happen? Take a moment, and try to see the situation from the outside. It’s going to be okay.</string>
    <string name="pep_do_your_best_title">Do your best, it\'s all you can do</string>
    <string name="pep_do_your_best">You know you are trying hard, but it still doesn\’t feel like enough. There\’s always one more thing you can do, one more thing you have to do, and there always will be. All you can do is try your best in the moment, and maybe that\’s not your all-time best, but it\’s what you can manage right now. And in the next moment, do it again. It\’s all you can do.</string>
    <string name="widget_prompt_blurb">You can write yourself a little \"emergency pep talk\" to come up on your homescreen when you tap the widget.</string>
    <string name="emergency_pep_talk">Emergency\nPep Talk</string>
    <string name="emergency_pep_talk_widget">emergency pep talk widget</string>
    <string name="live_in_the_moment_title">Live in the moment</string>
    <string name="live_in_the_moment">While “stop and smell the roses” may feel trite and overwrought, the message is an important one: we get stuck on planning, worrying, thinking about what’s going to happen, and forget that this, right now, is part of our life too. Don’t wait to live your life.</string>
    <string name="doing_and_not_doing_title">Doing, and not doing</string>
    <string name="doing_and_not_doing">There is so much pressure to take action, to push forward, to “just do it”, but you still have a choice. Maybe pushing yourself to be proactive isn’t the right thing for you right now, and it’s easy to forget that “no” is still an option. Being proactive is a choice, and it’s okay to delay! Procrastination is not the end of the world! Whatever is on your mind, it’s not life or death. Take your time. Give yourself permission to just not do it.</string>
    <string name="exercise_guilt_title">Exercise guilt</string>
    <string name="exercise_guilt">With so many sources and studies saying so many different things about what’s best for your body, it can be hard to know what’s right for you. Yes, exercise is necessary, but give yourself permission to not go overboard. You’re not a bad person if you don’t hit the gym. It’s okay to say “I won’t go today” without making a deal with yourself, “but I’ll go tomorrow to make up for it”. Let the guilt go, and go tomorrow because you want to, not because you feel guilty.</string>
    <string name="need_a_pep_talk">Need a pep talk?\ntap here</string>
    <string name="icon_credit">Credit for the lovely icon goes to Jane Ruby.</string>
    <string name="enter_peptalk_title_hint">Enter title for this pep talk…</string>
    <string name="enter_peptalk_body_hint">Hey buddy, you\'re great because…</string>
    <string name="signup_or_login">signup\nor login</string>
    <string name="peptalk_activity_header">Welcome to your toolbox! Here are all your Pep Talks! So if you want to jump to a specific one or add/edit/delete, here\'s where to do it!</string>
    <string name="checklist_activity_header">So you\'re feeling down, but before succumbing to stress and giving up, go through and your Checklist and see if you can turn today around!</string>
    <string name="peptalk_activity_header_title">Your Pep Talks</string>
    <string name="checklist_activity_header_title">Your Feel-Better Checklist</string>
    <string name="new_checklist_title_hint">To feel better, I will...</string>
    <string name="new_checklist_notes_hint">Notes</string>
    <string name="new_peptalk_title_hint">Pep Talk Title</string>
    <string name="new_peptalk_body_hint">I\'m going to be okay because...</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_account">Already have an account? Tap here</string>
    <string name="create_account">Or create an account</string>
    <string name="need_an_account">Need to create an account? Tap here</string>
    <string name="facebook_package_name">com.facebook.katana</string>
    <string name="default_email_type">message/rfc822</string>
    <string name="facebook_not_installed">Facebook is not currently installed on your device</string>
    <string name="default_sms_type">vnd.android-dir/mms-sms</string>
    <string name="no_network_connection_detected">No network connection detected</string>
    <string name="no_network_dialog_message">You may not be able to access your pep talks from our database until connection is restored</string>
    <string name="check_network">Check network</string>
    <string name="connection_restored">And we\'re back! Connection restored</string>
    <string name="no_luck">Still no luck, try again later</string>
    <string name="k">k</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>

</resources>
