<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_peptalks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pep_talks" />
        <item
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/feel_better_checklist" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/more_resources" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/instructions" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>

    </group>

    <!--<item android:title=""/>-->
    <!--<item android:title=""/>-->

    <!--<item android:title="Why not reach out to a friend?"/>-->
    <!--<item android:title="I know they'd love to hear from you">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_email"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/email"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_text"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/text"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_fb"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/fb"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
