<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="owlslubic.peptalkapp.views.LoginActivity">

    <TextView
        android:id="@+id/tv_login_welcome"
        style="@style/app_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="Welcome to Pep Talk Pal\nlet's get started"
        android:textSize="26sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_login_display_name"
        style="@style/my_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:hint="Name"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_login_display_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_login_email"
        style="@style/my_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:hint="Email address">

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_login_pass"
        style="@style/my_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:hint="Password">

        <EditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textview_login_alreadyhaveanaccount"
        style="@style/app_font.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account" />


</LinearLayout>
